OLMIS-1386: Added configuration settings for fulfillment
